@@ -1,0 +1,8 @@
+<!-- 
+    This is not an official MF2 test; it was added by Jason McIntosh in
+    response to some weird input seen in the wild.
+-->
+<div class="h-entry">
+<a href="https://fogknife.com/2019-06-03-two-takes-on-rss-for-june-2019.html" class="u-in-reply-to h-cite p-name p-foo p-bar p-baz">Two RSS experiments for June 2019</a>
+<div class="e-content">My post</div>
+</div>
