@@ -2,6 +2,10 @@ Revision history for Web::Microformats2
 
 {{$NEXT}}
 
+    - Improved parsing of an edge case where the input document wants to
+    place a new h-format under several u- or p- properties. (Probably
+    erroneously, but we should still handle it gracefully.)
+
 0.5 2018-07-30T13:50:48Z
 
     - Added support for parsing and presenting "rel" attributes.
